Bổ xung thêm csrf - router

--- a/views/index.html
+++ b/views/index.html
@@ -11,12 +11,17 @@
     <li><a href="/hello">res.render</a></li>
     <li><a href="/json">res.json</a></li>
     <li><a href="/raise_error">raise error</a></li>
+    <li><a href="/show_cookie">show cookie</a></li>
+    <li><a href="/route">list all route stack</a></li>
+    <li><a href="/person">list all people</a></li>
+    <li><a href="/person/123">show person with id = 123</a></li>
     <li><a href="/upload">upload photo</a></li>
     <li><a href="/stolen">Stolen password</a></li>
     <li><a href="/login">login</a></li>
     <li>Demo CSFR
         <ul>
-            <li><a href="/transfer_money">Transfer Money</a></li>
+            <li><a href="/transfer">Unsecure Transfer Money</a></li>
+            <li><a href="/secure_transfer">Secure Transfer Money</a></li>
         </ul>
     </li>
 
